# clip

./: .gitignore  README.md  package.json  pnpm-lock.yaml
apps/daemon/: Cargo.toml  package.json
apps/daemon/src/: capture_devices.rs  capture_monitor.rs  encoders.rs  gst_capture.rs  gst_utils.rs  lib.rs  logger.rs  main.rs  remux.rs  ring_buffer.rs  runtime.rs  settings.rs  state.rs
apps/daemon/src/audio/: encoder.rs  graph.rs  mixer.rs  mod.rs
apps/daemon/src/audio/source/: mic.rs  mod.rs  source.rs  system.rs
apps/daemon/src/ffmpeg/: builder.rs  capture.rs  mod.rs  monitor.rs  process.rs
apps/daemon/src/ffmpeg/capture/: audio_capture_args.rs  devices.rs  mod.rs  screen_capture_args.rs
apps/daemon/src/routes/: clip.rs  clips.rs  get_status.rs  mod.rs  shutdown.rs
apps/daemon/src/routes/config/: mod.rs  set_capture.rs
apps/daemon/src/routes/connection/: get_connection.rs  mod.rs
apps/daemon/src/routes/devices/: get_audio_devices.rs  get_microphone_devices.rs  get_video_devices.rs  mod.rs
apps/daemon/src/routes/encoders/: get_video_encoders.rs  mod.rs
apps/daemon/src/routes/logs/: get_logs.rs  mod.rs
apps/daemon/src/routes/settings/: get_settings.rs  mod.rs  update_settings.rs
apps/daemon/src/video/: encoder.rs  graph.rs  mod.rs  source.rs
apps/ui/: package.json  tailwindcss.config.js  theme.ts  vite.config.ts
apps/ui/src/: App.tsx  axiosClient.ts  globals.css  main.tsx
apps/ui/src-tauri/: Cargo.toml  tauri.conf.json
apps/ui/src-tauri/capabilities/: default.json
apps/ui/src-tauri/src/: lib.rs
apps/ui/src/components/: ControlPanel.tsx  (+4 more)
(+19 files in other folders)
