[package]
name = "clipd"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.5", features = ["cors"] }
chrono = { version = "0.4", features = ["clock"] }
gstreamer = "0.22"
gstreamer-app = "0.22"
windows = { version = "0.52", features = [
    "Win32_Graphics_Gdi",
    "Win32_Foundation"
]}
