[package]
name = "clip-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["sync"] }
chrono = { version = "0.4", features = ["clock"] }
gstreamer = "0.22"
gstreamer-app = "0.22"
directories = "5.0"
windows = { version = "0.52", features = [
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_System_Threading"
]}
crossbeam-channel = "0.5"
